# looksmaxgpt_contrastiveloss

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml  requirements.txt
.claude/: .nfs000000000009d4c300000c3c
configs/: antiexpert.yaml  target.yaml  target_dpo.yaml  target_infonce.yaml
data/d1_toxic/: train.jsonl  val.jsonl
data/d2_contrastive/: val.jsonl
models/looksmaxgpt/: README.md  adapter_config.json  tokenizer_config.json
models/looksmaxgpt/checkpoint-1764/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
models/looksmaxgpt/checkpoint-2646/: README.md  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
models/looksmaxgpt/checkpoint-882/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
models/target_infonce/: README.md
scripts/: build_d1.py  build_d2.py  evaluate.py  generate_negatives.py  make_pptx.py  train_antiexpert.py  train_target.py  train_target_dpo.py
slides/: architecture.excalidraw  infonce_vs_triplet.excalidraw  loss_function.excalidraw  pipeline.excalidraw  pooling_comparison.excalidraw  presentation.md  presentation.pptx  training_curves.excalidraw
